--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,2 @@
-population file ko duplicate template ma row ma 1 2 3 dekhayena
+population file ko duplicate template ma row ma 1 2 3  - done
+population file duplicate Export
